# pfeed

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  compose.yml  docker-compose.yml  logging.yml  pixi.toml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy-jupyterbook.yml  deploy-mystmd.yml
afterpython/: README.py  afterpython.toml  authors.yml  justfile  ruff.toml
afterpython/_website/: package.json
afterpython/blog/: myst.yml
afterpython/doc/: cryptohftdata.md  index.md  myst.yml
afterpython/docs_OLD/: CONTRIBUTING.md  README.md  _config.jb.yml.bak  _toc.jb.yml.bak  build.sh  cli_commands.md  docker_usage.md  myst.yml  overview.md
afterpython/example/: cryptohftdata.ipynb  myst.yml
afterpython/guide/: myst.yml
afterpython/tutorial/: myst.yml
docs/: CONTRIBUTING.md  README.md  _config.yml  _toc.jb.yml.bak  _toc.yml  build.sh  cli-reference.md  cli_commands.md  concepts.md  docker_usage.md  myst.yml  overview.md  supported-data-resolutions.md  supported-data-sources.md  supported-data-tools.md
docs/cli_commands/: clear.md  cli_commands.md  config.md  deltalake.md  download.md
docs/concepts/: concepts.md  data_lake.md  data_types.md  delta_lake.md  etl_elt.md  index.md  medallion.md
docs/coverage/: supported_product_types.md
docs/getting-started/: basics.md  cli_commands.md  getting-started.md  installation.md  usage.md
docs/how-to-guides/: eda.ipynb  index.md  scale_up.ipynb
docs/integrations/: bytewax.ipynb  delta-rs.ipynb  delta_lake.ipynb  duckdb.ipynb  fugue.ipynb  ibis.ipynb  index.md  prefect.ipynb  quadratic.md
docs/reference/: api_reference.md
docs/tutorials/: configuration.md  data_feed.md  data_recording.md  data_storage.md  dataops.md  download.md  index.md  partition_filtering.ipynb  partition_pruning.ipynb  pipeline_mode.ipynb  storage.ipynb  storage.md  stream.md
examples/: cryptohftdata.py
notebooks/: bybit_eda.ipynb
pfeed/: __init__.py  __main__.py  _typing.py  adapter.py  aliases.py  config.py  config_handler.py  data_client.py  datastore.py  engine.py  errors.py  etl.py  filepath.py  llm_plugin.py  main.py  resolution.py  stream_buffer.py  typing.py
pfeed/_etl/: base.py  market.py  news.py
pfeed/_io/: base_io.py  buffer_io.py  database_io.py  deltalake_io.py  duckdb_io.py  file_io.py  io_config.py  lancedb_io.py  parquet_io.py  postgresql_io.py  table_io.py  tabular_io.py
pfeed/_sinks/: __init__.py  base_sink.py  deltalake_sink.py  sink_config.py
pfeed/cli/: __init__.py  main.py  utils.py
pfeed/config/: config.py  logging.yml
pfeed/const/: aliases.py  common.py  common_literals.py  commons.py  paths.py
pfeed/data_handlers/: __init__.py  base_data_handler.py  market_data_handler.py  news_data_handler.py  streaming_data_handler_mixin.py  tabular_data_handler.py  time_based_data_handler.py
pfeed/data_models/: __init__.py  base_data_model.py  data_provider_model_mixin.py  fundamental_data_model.py  market_data_model.py  news_data_model.py  pfund_data_model.py  retrieve_market_data_model.py  time_based_data_model.py
pfeed/data_tools/: data_tool_dask.py  data_tool_pandas.py  data_tool_polars.py  data_tool_pyspark.py  data_tool_spark.py
pfeed/dataflow/: dataflow.py  faucet.py  result.py  sink.py
pfeed/enums/: __init__.py  compression.py  data_access_type.py  data_category.py  data_layer.py  data_provider_type.py  data_sink.py  data_source.py  data_storage.py  data_tool.py  data_type.py  extract_type.py  file_format.py  flow_type.py  io_format.py  storage_format.py  stream_mode.py  timestamp_precision.py
pfeed/feeds/: __init__.py  analyst_data_feed.py  analyst_feed.py  base_feed.py  binance_feed.py  bybit_feed.py  calendar_data_feed.py  calendar_feed.py  company_data_feed.py  crypto_feed.py  crypto_market_data_feed.py  crypto_market_feed.py  custom_csv_feed.py  databento_feed.py  economic_data_feed.py  economic_feed.py  economics_feed.py  financial_modeling_prep_feed.py  fundamental_data_feed.py  fundamental_feed.py  market_data_feed.py  market_feed.py  news_data_feed.py  news_feed.py  screener_feed.py  statements_feed.py  streaming_feed_mixin.py  time_based_feed.py  yahoo_finance_feed.py  yfinance_feed.py
pfeed/flows/: dataflow.py  faucet.py  result.py  sink.py  streaming_dataflow.py
pfeed/io/: base_io.py  tabular_io.py
pfeed/messaging/: __init__.py  bar_message.py  streaming_message.py  tick_message.py  zeromq.py
pfeed/plugins/: base_plugin.py  llm_plugin.py
pfeed/requests/: __init__.py  base_request.py  load_request.py  market_feed_base_request.py  market_feed_download.py  market_feed_download_request.py  market_feed_request.py  market_feed_retrieve_request.py  market_feed_stream_request.py  news_feed_base_request.py  news_feed_download.py  news_feed_download_request.py  time_based_feed_base_request.py  time_based_feed_download.py  time_based_feed_download_request.py
pfeed/schemas/: __init__.py  bar_data_schema.py  market_data_schema.py  news_data_schema.py  specs_schemas.py  streaming_message_schema.py  tick_data_schema.py  time_based_data_schema.py
pfeed/sources/: __init__.py  _pfund_source.py  base_data_source.py  base_source.py  data_provider_source.py  source_metadata.py  tradfi_data_provider_source.py  tradfi_source.py
pfeed/storages/: __init__.py  azure_storage.py  base_storage.py  cache_storage.py  database_storage.py  delta_lake_storage_mixin.py  deltalake_storage_mixin.py  duckdb_storage.py  file_backed_database_storage.py  file_based_storage.py  gcp_storage.py  huggingface_storage.py  lancedb_storage.py  local_storage.py  minio_storage.py  postgresql_storage.py  s3_storage.py  storage_config.py
pfeed/streaming/: __init__.py  bar_message.py  market_data_message.py  settings.py  stream_buffer.py  streaming_message.py  tick_message.py  zeromq.py
pfeed/types/: common_literals.py  core.py  literals.py
pfeed/typing/: __init__.py  core.py  literals.py
pfeed/utils/: __init__.py  adapter.py  arrow_schema_builder.py  dataframe.py  file_formats.py  file_path.py  hf_path.py  logging.py  monitor.py  ray.py  temporal.py  utils.py  (+1 more)
tests/: conftest.py
(+402 files in other folders)
