[project]
name = "pfeed"
version = "0.0.5"
description = "Data pipeline for algo-trading, getting and storing both real-time and historical data made easy."
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+pfeed@gmail.com"}
]
readme = "README.md"
keywords = ["trading", "algo-trading", "data pipeline", "ETL", "data lake", "data warehouse", "data integration", "historical data", "live data", "data streaming", "data engineering"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "pfund>=0.0.2",
    # TODO: upgrade to pandas 3.0.0 when other libraries support it (currently it breaks pandera etc.)
    "pandas>=2.3.3,<3.0.0",
    "polars>=1.38.1",
    "pyarrow>=22.0.0",
    "pandera>=0.29.0",
    "msgspec>=0.20.0",
    "pydantic>=2.12.5",
    "narwhals>=2.16.0",
    "zstandard>=0.25.0", # REVIEW: this is included in python 3.14
    "beautifulsoup4>=4.14.3",
    "cloudpathlib[s3,gs,azure]>=0.23.0",
    "ray[default]>=2.54.0",
    "pyzmq>=27.1.0",
    "deltalake>=1.4.2",
]

[project.optional-dependencies]
fmp = ["fmp-api-client>=0.0.1"]
yfinance = ["yfinance>=1.2.0"]
prefect = ["prefect>=3.6.17"]
hf = ["huggingface-hub>=1.4.1"]
# polars-cloud = ["polars-cloud>=0.4.2"]
dask = ["dask[complete,dataframe]>=2026.1.2"]
coiled = ["coiled>=1.131.0"]
spark = ["pyspark[connect,pandas-on-spark,sql]>=4.1.1"]
duckdb = ["duckdb>=1.4.4"]
lancedb = ["lancedb>=0.29.2"]
postgresql = ["psycopg[binary,pool]>=3.3.2"]
# "databento>=0.63.0",
# vortex = ["vortex-data>=0.55.0"]
# "minio>=7.2.20",
# kafka = ["confluent-kafka>=2.8.2"]
# massive = ["massive>=2.2.0"]  # previously "polygon"

[project.scripts]
pfeed = "pfeed.__main__:run_cli"

[project.entry-points."pfund_shell.commands"]
pfeed = "pfeed.cli:pfeed_group"

[project.urls]
homepage = "https://pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/pfeed"
documentation = "https://pfeed-docs.pfund.ai"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "basic"
reportAny = false
reportRedeclaration = false
reportMissingTypeStubs = false
reportImplicitOverride = false

[tool.uv.build-backend]
module-name = "pfeed"
module-root = ""

[tool.uv.sources]
pfund = { path = "../pfund", editable = true }
pfund-kit = { path = "../pfund-kit", editable = true }
fmp-api-client = { path = "../fmp-api-client", editable = true }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.sdist]
# include = ['/pfeed', 'logging.yml', 'compose.yml']

# [tool.hatch.build.targets.wheel]
# include = ['/pfeed', 'logging.yml', 'compose.yml']
