[project]
name = "pfeed"
version = "0.0.8"
description = "Data pipeline for algo-trading, getting and storing both real-time and historical data made easy."
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+pfeed@gmail.com"}
]
readme = "README.md"
keywords = ["trading", "algo-trading", "data pipeline", "ETL", "data lake", "data warehouse", "data integration", "historical data", "live data", "data streaming", "data engineering"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "pfund>=0.0.16",
    # NOTE: for some important packages (e.g. polars, pydantic) that can benefit pfeed from using the latest version
    # even Pyodide supports them, still add sys_platform != 'emscripten', meaning that
    # let pfeed WASM use the default versions on Pyodide with NO compatibility guarantee.
    "polars>=1.41.0 ; sys_platform != 'emscripten'",
    "pyarrow>=23.0.1 ; sys_platform != 'emscripten'",
    "pandera>=0.31.1",
    "msgspec>=0.21.1 ; sys_platform != 'emscripten'",
    "pydantic>=2.13.4 ; sys_platform != 'emscripten'",
    "narwhals>=2.21.2 ; sys_platform != 'emscripten'",
    "zstandard>=0.22.0", # REVIEW: this is included in python 3.14
    "beautifulsoup4>=4.12.3",
    "cloudpathlib[s3,gs,azure]>=0.24.0 ; sys_platform != 'emscripten'",
]

[project.optional-dependencies]
core = [
    "ray[default]>=2.55.1 ; sys_platform != 'emscripten'",
    "pyzmq>=27.1.0 ; sys_platform != 'emscripten'",
    "deltalake>=1.6.0 ; sys_platform != 'emscripten'",
]
prefect = ["prefect>=3.7.2"]
yfinance = ["yfinance>=1.4.0"]
hf = ["huggingface-hub>=1.16.1"]
pandas = ["pandas>=2.2.3"]
dask = ["dask[complete,dataframe]>=2026.3.0"]
spark = ["pyspark[connect,pandas-on-spark,sql]>=4.1.2"]
daft = ["daft>=0.7.14", "narwhals-daft>=0.4.1"]
duckdb = ["duckdb>=1.5.3"]
lancedb = ["lancedb>=0.30.2"]
# postgresql = ["psycopg[binary,pool]>=3.3.3"]
# fmp = ["fmp-api-client>=0.0.1"]
# "databento>=0.63.0",
# vortex = ["vortex-data>=0.55.0"]
# "minio>=7.2.20",
# kafka = ["confluent-kafka>=2.8.2"]
# massive = ["massive>=2.2.0"]  # previously "polygon"

[project.scripts]
pfeed = "pfeed.__main__:run_cli"

[project.entry-points."pfund_shell.commands"]
pfeed = "pfeed.cli:pfeed_group"

[project.urls]
homepage = "https://pfeed.pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/pfeed"
documentation = "https://pfeed.pfund.ai/doc"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
# typeCheckingMode = "basic"
reportAny = false
reportExplicitAny = false
reportIncompatibleVariableOverride = false
reportIncompatibleMethodOverride = false
reportUnnecessaryIsInstance = false
reportRedeclaration = false
reportUnreachable = false
reportImportCycles = false
reportPrivateUsage = false
reportMissingTypeStubs = false
reportUnannotatedClassAttribute = false
reportImplicitOverride = false

[tool.uv.build-backend]
module-name = "pfeed"
module-root = "src"

[tool.pytest.ini_options]
markers = [
    "smoke: Run the most important tests",
    "rate_limit: Run tests that can be rate-limited, e.g. calling Yahoo Finance API",
]
addopts = [
    "--strict-markers",
    "--no-header",
]
